--- a/feedbackfrom.html
+++ b/feedbackfrom.html
@@ -73,15 +73,15 @@
         <h2>Feedback Form</h2>
         <form action="#" method="post">
             <!-- Name Field -->
-            <label for="name">Name <span class="optional">(Optional)</span></label>
+            <label for="name">Name </label>
             <input type="text" id="name" name="name" placeholder="Enter your name">
 
             <!-- Email Field -->
-            <label for="email">Email <span class="optional">(Optional)</span></label>
+            <label for="email">Email </label>
             <input type="email" id="email" name="email" placeholder="Enter your email">
 
             <!-- Phone Field -->
-            <label for="phone">Phone <span class="optional">(Optional)</span></label>
+            <label for="phone">Phone </label>
             <input type="tel" id="phone" name="phone" placeholder="Enter your phone number">
 
             <!-- Rating Field -->
@@ -96,11 +96,11 @@
             </select>
 
             <!-- Questions Field -->
-            <label for="questions">Any Questions regarding product or service</label>
+            <label for="questions">ASK QUESTIONS</label>
             <textarea id="questions" name="questions" placeholder="Enter your questions"></textarea>
 
             <!-- Additional Comments Field -->
-            <label for="comments">Additional Comments <span class="optional">(Optional)</span></label>
+            <label for="comments">Comment <span class="optional">(Optional)</span></label>
             <textarea id="comments" name="comments" placeholder="Enter additional comments"></textarea>
 
             <!-- Submit Button -->
